updated the Readme file